// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render 1 expense summary component 1`] = `
<div>
  <h1>
    Viewing 
    1
     
    expense
     totaling: 
    $1.95
     
  </h1>
</div>
`;

exports[`should render multiple expense summary component  1`] = `
<div>
  <h1>
    Viewing 
    51
     
    Expenses
     totaling: 
    $6,546,546,543.21
     
  </h1>
</div>
`;
